# credit-default-risk-scoring

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: infer.yaml  train.yaml
configs/data/: home_credit.yaml
configs/infer_params/: default.yaml
configs/model/: baseline_perceptron.yaml  mlp.yaml
configs/preprocess/: numeric_only.yaml
configs/trainer/: default.yaml
credit_scoring/: __init__.py  api.py  data.py  dataset.py  infer.py  lightning_module.py  model.py  train.py
data/: application_test.csv.dvc  application_train.csv.dvc
