[project]
name = "credit-default-risk-scoring"
version = "0.1.0"
description = "Credit Default Risk Scoring"
authors = [{ name = "David Chibukhchian" }]
requires-python = ">=3.11, <3.13"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "pytorch-lightning (>=2.6.1,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "dvc (>=3.66.1,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "credit_scoring" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (==24.8.0)"
]
